--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.htwgkonstanz.locationreminder"
+    package="com.htwgkonstanz.locationreminder"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -11,7 +11,7 @@
         android:label="@string/app_name" >
         <activity
             android:label="@string/app_name"
-            android:name=".LocationReminderActivity" >
+            android:name=com.htwgkonstanz.locationreminder.LocationReminderActivityy" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
