--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,10 +5,16 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="14" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+   	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <uses-library android:name="com.google.android.maps" />
+        
         <activity
             android:name=".LocationReminderActivity"
             android:label="@string/app_name" >
@@ -28,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ChooseLoactionOnMap"
+            android:name=".ChooseLocationOnMap"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
