--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:label="@string/app_name" >
         <uses-library android:name="com.google.android.maps" />
         
+        <service android:name=".LocationProvider"/>
+        
         <activity
             android:name=".LocationReminderActivity"
             android:label="@string/app_name" >
@@ -62,6 +64,15 @@
         </activity>
         <activity
             android:name=".ChooseRemindingTime"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+         <activity
+            android:name=".ShowNearTasks"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
