--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name" >
         <uses-library android:name="com.google.android.maps" />
 
-        <service android:name=".LocationProvider" />
+        <service android:name=".service.LocationProvider" />
 
         <activity
             android:name=".LocationReminderActivity"
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CreateNewTask"
+            android:name=".edittasks.CreateNewTask"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +38,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ChooseLocationOnMap"
+            android:name=".maps.ChooseLocationOnMap"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SpecifyDaysAndTime"
+            android:name=".edittasks.SpecifyDaysAndTime"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,7 +56,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ShowAllTasks"
+            android:name=".showtasks.ShowAllTasks"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -74,7 +74,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ShowNearTasks"
+            android:name=".showtasks.ShowNearTasks"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -83,7 +83,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Preferences"
+            android:name=".preferences.Preferences"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -92,7 +92,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ShowTask"
+            android:name=".showtasks.ShowTask"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -101,7 +101,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".EditTask"
+            android:name=".edittasks.EditTask"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
